# usc-analyzer

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: basic_usage.py  sample.usc
usc_analyzer/: __init__.py  cli.py  main.py
usc_analyzer/type/: __init__.py  usc.py
