[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usc-analyzer"
version = "0.1.0"
description = "A Python library for analyzing USC (Universal Sekai Chart) files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Piliman22", email = "piliman2211@gmail.com"},
]
keywords = ["usc", "chart", "rhythm-game", "sekai", "analyzer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Untitled-Sekai/usc-analyzer"
Repository = "https://github.com/Untitled-Sekai/usc-analyzer"
Issues = "https://github.com/Untitled-Sekai/usc-analyzer"

[project.scripts]
usc-analyze = "usc_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["usc_analyzer"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
